loaded basic styles and content

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
         <meta charset="UTF-8">
         <link  rel="stylesheet" href="css/style.css">
         <link  rel="shortcut icon" href="assets/icons/favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
     </head>
     
     <body>
+        <i class="fa-brands fa-twitter"></i> 
+
+
+
+
+
+
+
+
+
+
+        <script src="https://kit.fontawesome.com/94350feece.js" crossorigin="anonymous"></script>
     </body>
 </html>
