--- a/index.html
+++ b/index.html
@@ -11,16 +11,82 @@
     </head>
     
     <body>
-        <i class="fa-brands fa-twitter"></i> 
+        <header>
+            <div class="header-inner">
+                <i class="header__nav fa-solid fa-bars"></i>
+                <div class="header__logo">
+                    <i class="fa-solid fa-fingerprint"></i>
+                    <span class="header__logo__title">tinyone</span>
+                </div>
+                <div class="header-socials">
+                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href=""><i class="fa-brands fa-pinterest"></i></a>
+                </div>
+            </div>
+        </header>
 
+        <section class="intro">
+            <div class="intro-inner">
+                <h1 class="intro__heading">Inspire your inspiration</h1>
+                <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</h2>
+                <a class="intro__btn" href="#start-section">Get start</a>
+            </div>
+        </section>
 
-
-
-
-
-
-
-
+        <section id="start-section" class="features">
+            <div class="features-inner">
+                <div class="features-heading">
+                    <h1 class="features-heading__title">Tinyone features</h1>
+                    <h2 class="features-heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</h2>
+                </div>
+                <div class="features-grid">
+                    <div class="grid__item">
+                        <i class="fa-solid fa-mobile-screen"></i>
+                    </div>
+                    <div class="grid__item__text">
+                        <h3 class="grid__item__title">Fully Responsive</h3>
+                        <h4 class="grid__item__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</h4>
+                    </div>
+                    <div class="grid__item">
+                        <i class="fa-regular fa-lemon"></i>
+                    </div>
+                    <div class="grid__item__text">
+                        <h3 class="grid__item__title">Fully Layered PSD</h3>
+                        <h4 class="grid__item__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</h4>
+                    </div>
+                    <div class="grid__item">
+                        <i class="fa-regular fa-folder"></i>
+                    </div>
+                    <div class="grid__item__text">
+                        <h3 class="grid__item__title">Font Awesome Icons</h3>
+                        <h4 class="grid__item__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</h4>
+                    </div>
+                    <div class="grid__item">
+                        <i class="fa-solid fa-code"></i>
+                    </div>
+                    <div class="grid__item__text">
+                        <h3 class="grid__item__title">HTML3 & CSS3 </h3>
+                        <h4 class="grid__item__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</h4>
+                    </div>
+                    <div class="grid__item">
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="grid__item__text">
+                        <h3 class="grid__item__title">Email Template</h3>
+                        <h4 class="grid__item__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</h4>
+                    </div>
+                    <div class="grid__item">
+                        <i class="fa-regular fa-bookmark"></i>
+                    </div>
+                    <div class="grid__item__text">
+                        <h3 class="grid__item__title">Free to download</h3>
+                        <h4 class="grid__item__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script src="https://kit.fontawesome.com/94350feece.js" crossorigin="anonymous"></script>
     </body>
