--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <section id="start-section" class="features">
             <div class="features-inner">
                 <div class="features-heading">
-                    <h1 class="features-heading__title">Tinyone features</h1>
-                    <h2 class="features-heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</h2>
+                    <h2 class="features-heading__title">Tinyone features</h2>
+                    <h3 class="features-heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</h3>
                 </div>
                 <div class="features-grid">
                     <div class="grid__item">
@@ -83,6 +83,62 @@
                     <div class="grid__item__text">
                         <h3 class="grid__item__title">Free to download</h3>
                         <h4 class="grid__item__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="pricing">
+            <div class="pricing-inner">
+                <div class="pricing-heading">
+                    <h2 class="pricing-heading__title">Pricing And Free Trial</h2>
+                    <h3 class="pricing-heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</h3>
+                </div>
+                <div class="pricing-cols">
+                    <div class="pricing__column">
+                        <div class="pricing__column__photo">
+                            <i class="fa-solid fa-mobile-screen"></i>
+                        </div>
+                        <div class="pricing__column__text">
+                            <h3>Basic</h3>
+                            <h4>Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit</h4>
+                        </div>
+                        <div class="pricing__column__price">
+                            <span class="price">Free</span>
+                            <p class="limit">free forever</p>
+                        </div>
+                        <a class="pricing__column__btn" href="">Get free now</a>
+                    </div>
+                    <div class="pricing__column">
+                        <div class="pricing__column__photo">
+                            <i class="fa-solid fa-laptop"></i>
+                        </div>
+                        <div class="pricing__column__text">
+                            <h3>Standart</h3>
+                            <h4>Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit</h4>
+                        </div>
+                        <div class="pricing__column__price">
+                            <span class="price">$99</span>
+                            <p class="limit">month</p>
+                        </div>
+                        <a class="pricing__column__btn" href="">Upgrade</a>
+                    </div>
+                    <div class="pricing__column">
+                        <div class="pricing__column__photo">
+                            <i class="fa-solid fa-desktop"></i>
+                        </div>
+                        <div class="pricing__column__text">
+                            <h3>Enterprice</h3>
+                            <h4>Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit</h4>
+                        </div>
+                        <div class="pricing__column__price">
+                            <span class="price">$199</span>
+                            <p class="limit">month</p>
+                        </div>
+                        <a class="pricing__column__btn" href="">Learn more</a>
                     </div>
                 </div>
             </div>
