--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </header>
-
+        
         <section class="intro">
             <div class="intro-inner">
                 <h1 class="intro__heading">Inspire your inspiration</h1>
@@ -35,6 +35,7 @@
             </div>
         </section>
 
+        
         <section id="start-section" class="features">
             <div class="features-inner">
                 <div class="features-heading">
@@ -96,49 +97,52 @@
                 </div>
                 <div class="pricing-cols">
                     <div class="pricing__column">
-                        <div class="pricing__column__photo">
-                            <i class="fa-solid fa-mobile-screen"></i>
+                        <div class="column__item">
+                            <div class="pricing__column__photo">
+                                <i class="fa-solid fa-mobile-screen"></i>
+                            </div>
+                            <div class="pricing__column__text">
+                                <h3>Basic</h3>
+                                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aperiam earum reprehenderit? Veniam corporis saepe, quia inventore velit enim quos.</h4>
+                            </div>
+                            <div class="pricing__column__price">
+                                <span class="price">Free</span>
+                                <p class="limit">free forever</p>
+                            </div>
+                            <a class="pricing__column__btn" href="">Get free now</a>
                         </div>
-                        <div class="pricing__column__text">
-                            <h3>Basic</h3>
-                            <h4>Lorem ipsum dolor sit amet, 
-                                consectetur adipiscing elit</h4>
-                        </div>
-                        <div class="pricing__column__price">
-                            <span class="price">Free</span>
-                            <p class="limit">free forever</p>
-                        </div>
-                        <a class="pricing__column__btn" href="">Get free now</a>
                     </div>
                     <div class="pricing__column">
-                        <div class="pricing__column__photo">
-                            <i class="fa-solid fa-laptop"></i>
+                        <div class="column__item">
+                            <div class="pricing__column__photo">
+                                <i class="fa-solid fa-laptop"></i>
+                            </div>
+                            <div class="pricing__column__text">
+                                <h3>Standart</h3>
+                                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quam!</h4>
+                            </div>
+                            <div class="pricing__column__price">
+                                <span class="price">$99</span>
+                                <p class="limit">month</p>
+                            </div>
+                            <a class="pricing__column__btn" href="">Upgrade</a>
                         </div>
-                        <div class="pricing__column__text">
-                            <h3>Standart</h3>
-                            <h4>Lorem ipsum dolor sit amet, 
-                                consectetur adipiscing elit</h4>
-                        </div>
-                        <div class="pricing__column__price">
-                            <span class="price">$99</span>
-                            <p class="limit">month</p>
-                        </div>
-                        <a class="pricing__column__btn" href="">Upgrade</a>
                     </div>
                     <div class="pricing__column">
-                        <div class="pricing__column__photo">
-                            <i class="fa-solid fa-desktop"></i>
+                        <div  class="column__item">
+                            <div class="pricing__column__photo">
+                                <i class="fa-solid fa-desktop"></i>
+                            </div>
+                            <div class="pricing__column__text">
+                                <h3>Enterprice</h3>
+                                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eius, placeat sequi in quaerat repellat?</h4>
+                            </div>
+                            <div class="pricing__column__price">
+                                <span class="price">$199</span>
+                                <p class="limit">month</p>
+                            </div>
+                            <a class="pricing__column__btn" href="">Learn more</a>
                         </div>
-                        <div class="pricing__column__text">
-                            <h3>Enterprice</h3>
-                            <h4>Lorem ipsum dolor sit amet, 
-                                consectetur adipiscing elit</h4>
-                        </div>
-                        <div class="pricing__column__price">
-                            <span class="price">$199</span>
-                            <p class="limit">month</p>
-                        </div>
-                        <a class="pricing__column__btn" href="">Learn more</a>
                     </div>
                 </div>
             </div>
