added stats, keep in touch & footer

--- a/index.html
+++ b/index.html
@@ -368,6 +368,162 @@
             </div>
         </section>
 
+        <section class="stats">
+            <div class="stats-container">
+                <div class="stats-inner">
+                    <div class="stats-heading">
+                        <h2 class="heading__title">Stats & Testimonial</h2>
+                        <p class="heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
+                    </div>
+                    <div class="statistics-container">
+                        <div class="statistics__row">
+                            <div class="statistics__column">
+                                <div class="statistics__item">
+                                    <i class="fa-solid fa-puzzle-piece"></i>
+                                    <span class="number">20</span>
+                                    <p class="stat">Products</p>
+                                </div>
+                            </div>
+                            <div class="statistics__column">
+                                <div class="statistics__item">
+                                    <i class="fa-solid fa-cloud-arrow-down"></i>
+                                    <span class="number">120,000</span>
+                                    <p class="stat">Downloads</p>
+                                </div>
+                            </div>
+                            <div class="statistics__column">
+                                <div class="statistics__item">
+                                    <i class="fa-solid fa-users"></i>
+                                    <span class="number">120</span>
+                                    <p class="stat">Customers</p>
+                                </div>
+                            </div>
+                            <div class="statistics__column">
+                                <div class="statistics__item">
+                                    <i class="fa-solid fa-thumbs-up"></i>
+                                    <span class="number">900</span>
+                                    <p class="stat">Like</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-container">
+                        <div class="testimonial__column">
+                            <div class="testimonial__item">
+                                <img src="assets/images/ava-1.png" alt="">
+                                <p class="name">John Doe</p>
+                                <p class="job">from Wordpress</p>
+                                <div class="quote-container">
+                                    <i class="fa-solid fa-quote-left quote_left"></i>
+                                    <blockquote class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</blockquote>
+                                    <i class="fa-solid fa-quote-right quote_right"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="intouch">
+            <div class="intouch-container">
+                <div class="intouch-inner">
+                    <div class="intouch-heading">
+                        <h2 class="heading__title">Keep in touch with us</h2>
+                        <p class="heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
+                    </div>
+                    <div class="contacts-container">
+                        <div class="contacts__row">
+                            <div class="contacts__column">
+                                <div class="contacts__item">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <p class="title">Address</p>
+                                    <p class="subtitle">66, Dang Van ngu, Dong Da, 
+                                        Ha noi, Vietnam</p>
+                                </div>
+                            </div>
+                            <div class="contacts__column">
+                                <div class="contacts__item">
+                                    <i class="fa-solid fa-envelope"></i>
+                                    <p class="title">E-mail</p>
+                                    <p class="subtitle">contact@halovietnam.com</p>
+                                </div>
+                            </div>
+                            <div class="contacts__column">
+                                <div class="contacts__item">
+                                    <i class="fa-solid fa-square-phone"></i>
+                                    <p class="title">Phone</p>
+                                    <p class="subtitle">+844 1234 56789</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-container">
+                        <div class="form__column">
+                            <input type="email" name="email" placeholder="Email">
+                            <input type="text" name="name" placeholder="Full name">
+                            <textarea type="text" name="message" placeholder="Message" rows="5"></textarea>
+                            <a class="form__column__btn" href="">Send message</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="footer-container">
+                <div class="footer-heading">
+                    <h2 class="heading__title">Sign up for our newsletter</h2>
+                    <p class="heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum. Donec rutrum sed sem quis venenatis.</p>
+                </div>
+                <div class="footer__form">
+                    <input type="email" name="email" placeholder="Enter your email to update">
+                    <a class="footer__form__btn" href="">Submit</a>
+                </div>
+                <div class="navigation">
+                    <div class="info__column">
+                        <p class="address">HALOVIETNAM LTD
+                            66,<br> Dang Van ngu, Dong Da
+                            <br>Hanoi, Vietnam</p>
+                            <p class="email">contact@halovietnam.com</p>
+                            <p class="phone">+844 35149182</p>    
+                    </div>
+                    <div class="nav__row">
+                        <div class="nav__column">
+                            <div class="column__container">
+                                <p>Examples</p>
+                                <p>Shop</p>
+                                <p>License</p>
+                            </div>
+                        </div>
+                        <div class="nav__column">
+                            <div class="column__container">
+                                <p>Contacn</p>
+                                <p>About</p>
+                                <p>Privacy</p>
+                                <p>Terms</p>
+                            </div>
+                        </div>
+                        <div class="nav__column">
+                            <div class="column__container">
+                                <p>Download</p>
+                                <p>Support</p>
+                                <p>Documents</p>
+                            </div>
+                        </div>
+                        <div class="nav__column">
+                            <div class="column__container">
+                                <p>Media</p>
+                                <p>Blog</p>
+                                <p>Forums</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <script src="https://kit.fontawesome.com/94350feece.js" crossorigin="anonymous"></script>
     </body>
 </html>
